--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <body>
     <div id="root">
     </div>
+    
+    <!-- <script src="https://cdn.staticfile.org/plupload/3.1.0/plupload.min.js"></script> -->
+    <script src="http://cdn.staticfile.org/plupload/2.1.2/moxie.js"></script>
+    <!-- <script src="/src/plupload.full.min.js"></script> -->
+    <script src="http://cdn.staticfile.org/plupload/2.1.2/plupload.dev.js"></script>
+    <script src="/src/qiniu.js"></script>
     <script src="/bundle.js"></script>
   </body>
 </html>
