--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>好电影</title>
+    <title>here you are</title>
   </head>
   <body>
     <div id="root">
