上传图集,用户注册

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>here you are</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,300' rel='stylesheet' type='text/css'>
     <style>
       body{
         position: relative;
@@ -36,6 +37,7 @@
     <!-- <canvas height="500"></canvas> -->
     
     <!-- <script src="https://cdn.staticfile.org/plupload/3.1.0/plupload.min.js"></script> -->
+    <script src="http://ovhjj2x39.bkt.clouddn.com/googlegallery.js"></script>
     <script src="http://cdn.staticfile.org/plupload/2.1.2/moxie.js"></script>
     <!-- <script src="/src/plupload.full.min.js"></script> -->
     <script src="http://cdn.staticfile.org/plupload/2.1.2/plupload.dev.js"></script>
