--- a/index1.html
+++ b/index1.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>梦想工作台</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,300' rel='stylesheet' type='text/css'>
     <style>
