引用文件改成https

--- a/index1.html
+++ b/index1.html
@@ -37,9 +37,9 @@
 <div id="root">
 
 </div>
-<script src="http://ovhjj2x39.bkt.clouddn.com/googlegallery.js"></script>
-<script src="http://cdn.staticfile.org/plupload/2.1.2/moxie.js"></script>
-<script src="http://cdn.staticfile.org/plupload/2.1.2/plupload.dev.js"></script>
+<script src="https://ovhjj2x39.bkt.clouddn.com/googlegallery.js"></script>
+<script src="https://cdn.staticfile.org/plupload/2.1.2/moxie.js"></script>
+<script src="https://cdn.staticfile.org/plupload/2.1.2/plupload.dev.js"></script>
 <script src="/src/qiniu.js"></script>
 </body>
 </html>
